[workspace]
members = ["app", "backend", "entity", "frontend", "migration"]
# Add this to fix the warning: some crates are on edition 2021 which defaults to resolver = "2"
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["brklntmhwk"]
description = "A Rust app built with Axum, Leptos, SeaORM(SQLx, PostgreSQL), TailwindCSS, and more"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true      # Strip unnecessary info away to reduce the binary size

[workspace.dependencies]
http = "0.2.9"
leptos = { version = "0.5.0", default-features = false, features = ["serde"] }
leptos_axum = { version = "0.5.0" }
leptos_config = "0.5.0"
leptos_dom = { version = "0.5.0", default-features = false }
leptos_meta = { version = "0.5.0", default-features = false }
leptos_router = { version = "0.5.0", default-features = false }
serde = { version = "1.0.188", default-features = false }
thiserror = "1.0.49"
tracing = { version = "0.1.37", default-features = false }

[[workspace.metadata.leptos]]
name = "leptos-practice"
output-name = "leptos-app"
bin-package = "backend"
lib-package = "frontend"
assets-dir = "public"
reload-port = 3001
site-addr = "127.0.0.1:3000"
site-pkg-dir = "pkg"
site-root = "target/site"
# style-file = "style/main.css"
tailwind-input-file = "style/input.css"
tailwind-config-file = "./tailwind.config.cjs"
watch = false
