[workspace]
members = [
  "app",
  "backend",
  "common",
  "frontend"
]
# Add this to fix the warning: some crates are on edition 2021 which defaults to resolver = "2"
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["brklntmhwk"]
description = "A Rust app built with Axum, Leptos, SQLx(PostgreSQL), and more"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true # Strip unnecessary info away to reduce the binary size

[workspace.dependencies]
leptos = { version = "0.4.10", default-features = false }
leptos_axum = { version = "0.4.10" }
leptos_config = "0.4.10"
leptos_meta = {version = "0.4.10", default-features = false }
leptos_router = {version = "0.4.10", default-features = false }

[[workspace.metadata.leptos]]
name = "rental-dvd-shop"
bin-feaures = ["ssr"]
bin-package = "backend"
lib-features = ["hydrate"]
lib-package = "frontend"
assets-dir = "public"
reload-port = 3001
site-addr = "127.0.0.1:3000"
site-pkg-dir = "pkg"
site-root = "target/site"
watch = false
