[package]
name = "backend"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"]}
entity = { path = "../entity" }

http.workspace = true
leptos = { workspace = true, features = [ "serde", "ssr" ]}
leptos_axum.workspace = true
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
serde = { workspace = true, features = ["derive", "serde_derive", "alloc", "rc"] }
tracing = { workspace = true, features = ["async-await", "log"] }

anyhow = "1.0.75"
axum = "0.6.11"
bigdecimal = { version = "0.4.1", features = ["serde"]}
log = "0.4.17"
simple_logger = "4.1.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["once_cell", "serde", "serde_json", "tracing", "json", "time"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "fs", "sensitive-headers", "tokio", "trace", "tracing"] }
