[package]
name = "entity"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration", optional = true }

derive_more.workspace = true
serde = { workspace = true, features = [
  "derive",
  "serde_derive",
  "alloc",
  "rc",
] }
thiserror.workspace = true
tracing.workspace = true

chrono = { version = "0.4.31", features = ["serde", "alloc"] }
dotenvy = "0.15.7"
figment = { version = "0.10.10", features = [
  "toml",
  "json",
  "env",
  "yaml",
], optional = true }
uuid = { version = "1.4.1", features = ["v4", "v7"] }

[dependencies.sea-orm]
version = "0.12.3"
features = ["with-chrono", "with-json", "with-uuid"]

[features]
default = ["server-side"]
server-side = [
  "sea-orm/runtime-tokio-rustls",
  "sea-orm/sqlx-postgres",
  "dep:figment",
  "dep:migration",
]
client-side = []
