[package]
name = "app"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
serde = { workspace = true, features = ["derive", "serde_derive", "alloc", "rc"] }
thiserror.workspace = true

entity = { path = "../entity", default-features = false }

cfg-if = "1.0.0"
http = "0.2.9"

sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "bigdecimal" ], optional = true }
tokio = { version = "1.32.0", features = ["full"], optional = true }

[features]
default= ["ssr"]
hydrate = ["entity/client", "leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["entity/server", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:sqlx", "dep:tokio"]
