[package]
name = "app"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity", default-features = false }

http.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_dom.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
serde = { workspace = true, features = ["derive", "serde_derive", "alloc", "rc"] }
thiserror.workspace = true
tracing = { workspace = true, features = ["async-await", "log"] }

cfg-if = "1.0.0"

[features]
default= ["ssr"]
hydrate = ["entity/client-side", "leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["entity/server-side", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
