[package]
name = "common"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
