[package]
name = "entity"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive", "serde_derive", "alloc", "rc"] }
thiserror.workspace = true
tracing.workspace = true

chrono = {version = "0.4.30", features = ["serde", "alloc"]}
dotenvy = "0.15.7"
figment = { version = "0.10.10", features = ["toml", "json", "env", "yaml"], optional = true }
derive_more = "0.99.17"

[dependencies.sea-orm]
version = "0.12.3"
features = ["with-chrono"]

[features]
default = ["server"]
server = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres", "dep:figment"]
client = []
