[package]
name = "frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
leptos = { workspace = true, features = [ "hydrate" ] }
wasm-bindgen.workspace = true
