[package]
name = "frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = [ "hydrate" ] }

app = { path = "../app", default-features = false, features = ["hydrate"] }
common = { version = "0.1.0", path = "../common" }

console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
log = "0.4.17"
