[package]
name = "frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }

leptos = { workspace = true, features = [ "hydrate" ] }
tracing.workspace = true

console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
